--- a/CarCompanion/app/build.gradle
+++ b/CarCompanion/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
