--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,13 @@ jobs:
       - name: Copy gradle properties file
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
 
       - name: Build the app
         run: ./gradlew assembleDebug
