--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,8 +65,9 @@ jobs:
         with:
           java-version: 11
 
-      - name: Run detekt
-        run: ./gradlew detektCheck
+      # Detekt is a static code analysis tool; may be worth looking into later on
+      # - name: Run detekt
+      #   run: ./gradlew detektCheck
 
       - name: Run unit tests
         run: ./gradlew test --stacktrace
