--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,13 +38,16 @@ jobs:
       - name: Build the app
         run: ./gradlew assembleDebug
 
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test-Reports
+          path: app/build/outputs/apk/debug/app-debug.apk
+        if: always()
+
   test:
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      matrix:
-        api-level: [21, 23, 29]
-        target: [default]
 
     steps:
       - name: Checkout the code
@@ -65,21 +68,8 @@ jobs:
         with:
           java-version: 11
 
-      # Detekt is a static code analysis tool; may be worth looking into later on
-      # - name: Run detekt
-      #   run: ./gradlew detektCheck
-
       - name: Run unit tests
         run: ./gradlew test --stacktrace
-
-      - name: Instrumentation Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
-          arch: x86
-          profile: Nexus 6
-          script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
         uses: actions/upload-artifact@v2
