--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: Test-Reports
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
         if: always()
 
