--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation 'org.osmdroid:osmdroid-android:6.1.16'
 }
 task prepareKotlinBuildScriptModel {
 
