--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
+    implementation 'com.github.jillesvangurp:overpass-kotlin-client:v0.2'
 }
 task prepareKotlinBuildScriptModel {
 
