State machine? State machine.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
     implementation 'com.github.jillesvangurp:overpass-kotlin-client:v0.2'
+    implementation 'io.github.nsk90:kstatemachine:0.22.1'
+    implementation 'io.github.nsk90:kstatemachine-coroutines:0.22.1'
 }
 task prepareKotlinBuildScriptModel {
 
